Fix recording of DataReductionProxy.ConfigService.HTTPRequests

Do not record if:
(1) Chrome is in data reduction proxy holdback experiment.
(2) URL is a local host URL.

Also, record the sample as false only when the config is missing.

BUG=705167

Review-Url: https://codereview.chromium.org/2776583002
Cr-Commit-Position: refs/heads/master@{#460217}

Former-commit-id: 13390fea415c0b7ac32a5c8de7e370ba57a15440